crates/celox/tests/snapshots/error_readability__combinational_loop_sir_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: err
---
scheduler

  × Combinational loop detected: y[0] -> z[0] -> x[0]
