crates/celox/tests/snapshots/error_readability__sv_module_unsupported_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: err
---
unsupported_simulator_parser

  × Unsupported in simulator parser: systemverilog module instantiation (name: StrId(278))
