crates/celox/tests/snapshots/error_readability__top_not_found_error_readability.snap
---
source: crates/celox/tests/error_readability.rs
expression: err
---
top_not_found

  × Top module `NonExistentTop` not found in IR
